# The-Elysium-Archive

./: .flake8  .gitignore  .pylintrc  Procfile  README.md  TESTING.md  bandit.yaml  changes.txt  conftest.py  d  dev-requirements.txt  env.example  manage.py  pyproject.toml  pytest.ini  requirements.txt  
TESTS/accounts/: test_auth_pages.py  test_email_gate.py  test_profile.py
TESTS/cart/: test_cart.py
TESTS/checkout/: test_checkout.py  test_webhooks.py
TESTS/home/: test_home.py
TESTS/orders/: test_orders.py
TESTS/products/: test_access_control.py  test_archive_read.py  test_deal_banners.py  test_product_removal.py  test_products.py
TESTS/reviews/: test_reviews.py
accounts/: admin.py  apps.py  backends.py  decorators.py  forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_userprofile_profile_picture.py  0003_alter_userprofile_display_name.py
accounts/templates/accounts/: login.html  (+2 more)
accounts/tests/: __init__.py  test_auth_pages.py  test_email_gate.py  test_profile.py
cart/: admin.py  apps.py  cart.py  models.py  signals.py  tests.py  urls.py  views.py
cart/migrations/: 0001_initial.py
checkout/: admin.py  models.py  tests.py  urls.py  views.py  webhooks.py
elysium_archive/: asgi.py  context_processors.py  helpers.py  settings.py  settings_test.py  type_guards.py  urls.py  wsgi.py
elysium_archive/reviews/: models.py  views.py
home/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
orders/: admin.py  models.py  order_utils.py  services.py  tests.py
orders/migrations/: 0001_initial.py  0002_order_stripe_fields_accessentitlement.py  0003_remove_order_stripe_pid_and_more.py  0004_safe_status_normalization.py  0005_alter_accessentitlement_product.py
products/: admin.py  admin_utils.py  models.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_image_alt.py  0003_product_category_product_content.py  0004_category_model_and_fk.py  0005_alter_product_content.py  0006_product_is_deal.py  0007_alter_category_options_alter_category_description_and_more.py  0008_product_deal_exclude_product_deal_manual_and_more.py  0009_alter_product_image_alt.py  0010_dealbanner_discount_percentage.py  0011_remove_product_deal_exclude_and_more.py  0012_alter_dealbanner_options_dealbanner_is_featured.py  0013_alter_dealbanner_is_featured.py  0014_product_is_removed.py
products/templatetags/: elysium_images.py
products/tests/: test_access_control.py  test_archive_read.py
reviews/: admin.py  forms.py  models.py  tests.py  views.py
static/css/: base.css  email.css  home-coming.css
static/js/: cart-update.js  checkout-status.js  dashboard.js  deal-banner-carousel.js  effects-toggle.js  messages.js  review-form.js
templates/: 400.html  403.html  404.html  500.html  base.html
templates/account/: email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/accounts/: account_confirm_delete.html  dashboard.html  delete_account.html  my_archive.html  profile.html
templates/error_pages/: 400.html  403.html  404.html  500.html
templates/footer/: contact_lore.html  privacy_covenant.html  terms_archiver.html
templates/includes/: messages.html  no_refunds_policy.html
(+47 files in other folders)
